integrations/ws-proxy-eg/k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ws-proxy-eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ws-proxy
  namespace: default
spec:
  gatewayClassName: ws-proxy-eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ws-proxy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: ws-proxy.example.com
